--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1"
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '2.23.0'
+
+
+
     //UI Libraries
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
